# mcp-dev

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: AUTHORIZATION_HANDLING.md  GITHUB_TOOL.md  RAG_PLAN.md  SESSION_AUTH.md  dev_notes.md
src/workbench_mcp/: config.py  server.py
src/workbench_mcp/auth/: session.py
src/workbench_mcp/db/: connection.py  guards.py
src/workbench_mcp/tools/: auth.py  database.py  github.py  http_requests.py  os_scripts.py
tests/: test_auth_session.py  test_github_tool.py  test_http_requests.py
