[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench-mcp"
version = "0.1.0"
description = "Local MCP server for safe PostgreSQL exploration on Linux."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "sqlparse>=0.5.0",
]

[project.scripts]
workbench-mcp = "workbench_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
